[package]
name = "corestore"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.40"
random-access-storage = "5"
thiserror = "1.0.64"
random-access-memory = { version = "3.0.0" }
random-access-disk = { version = "3.0.1", default-features = false, features = ["sparse", "tokio"] }
tokio = { version = "1.40.0", features = ["macros", "test-util"] }
data-encoding = "2.6.0"

[dependencies.hypercore]
git = "https://github.com/cowlicks/hypercore.git"
branch = "replication"
default-features = false
features = ["sparse", "tokio"]

[dependencies.hypercore-protocol]
git = "https://github.com/cowlicks/hypercore-protocol-rs.git"
branch = "replication"
default-features = false
features = ["sparse", "tokio"]


[dev-dependencies]
tempfile = "3.10.0"
